--- a/index.html
+++ b/index.html
@@ -1,24 +1,31 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>LUXE - Contemporary Fashion Store</title>
-    <meta name="description" content="Curated fashion essentials designed for the modern wardrobe. Quality craftsmanship meets contemporary style. Shop our collection of timeless clothing and accessories." />
-    <meta name="author" content="LUXE" />
 
-    <meta property="og:title" content="LUXE - Contemporary Fashion Store" />
-    <meta property="og:description" content="Curated fashion essentials designed for the modern wardrobe. Quality craftsmanship meets contemporary style." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+  <title>LUXE - Contemporary Fashion Store</title>
+  <meta name="description"
+    content="Curated fashion essentials designed for the modern wardrobe. Quality craftsmanship meets contemporary style. Shop our collection of timeless clothing and accessories." />
+  <meta name="author" content="LUXE" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="LUXE - Contemporary Fashion Store" />
+  <meta property="og:description"
+    content="Curated fashion essentials designed for the modern wardrobe. Quality craftsmanship meets contemporary style." />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@lovable_dev" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
