--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+  <link
+    href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&family=Playfair+Display:wght@700;900&display=swap"
+    rel="stylesheet">
   <link rel="icon" type="image/svg+xml"
     href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Cdefs%3E%3ClinearGradient id='gold' x1='0%25' y1='0%25' x2='100%25' y2='100%25'%3E%3Cstop offset='0%25' style='stop-color:%23FFD700;stop-opacity:1' /%3E%3Cstop offset='100%25' style='stop-color:%23D4AF37;stop-opacity:1' /%3E%3C/linearGradient%3E%3C/defs%3E%3Ccircle cx='50' cy='50' r='40' fill='none' stroke='url(%23gold)' stroke-width='4'/%3E%3Ccircle cx='50' cy='50' r='30' fill='none' stroke='url(%23gold)' stroke-width='3'/%3E%3Ccircle cx='50' cy='50' r='20' fill='none' stroke='url(%23gold)' stroke-width='2'/%3E%3Ccircle cx='50' cy='50' r='8' fill='url(%23gold)'/%3E%3C/svg%3E" />
   <title>KARU - Contemporary Fashion Store</title>
